# internal/server/http.go
@@ -29,8 +29,8 @@ func NewHTTPServer(c *conf.Server, logger log.Logger, auth *service.AuthService,
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	authV1.RegisterAuthHTTPServer(srv, auth)
-	m2mV1.RegisterAuthHTTPServer(srv, m2mAuth)
-	permissionV1.RegisterPermissionHTTPServer(srv, permission)
+	authV1.RegisterAuthServiceHTTPServer(srv, auth)
+	m2mV1.RegisterAuthServiceHTTPServer(srv, m2mAuth)
+	permissionV1.RegisterPermissionServiceHTTPServer(srv, permission)
 	return srv
 }
